--- a/assets/styles/library.less
+++ b/assets/styles/library.less
@@ -1,5 +1,8 @@
 @import url("variables.less");
 
+.library-content-wrapper {
+  padding-left: 60px;
+}
 .library-filter ul {
   max-width: 500px;
   display: inline-block;
