--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -114,37 +114,10 @@ h3 {
   }
   .library-result-table table th:nth-child(5),.library-result-table table th:nth-child(7), .library-result-table table th:nth-child(8) {
     display: none;
-  }
-  // -- artist profile --
-
-  .header-banner {
-    background-position: center -100px;
-    height: 150px;
-  }
-  .header-content-wrapper {
-    padding: @space-md 0 0;
-  }
-    .header-content-detail {
-      padding: @space-md;
-      text-align: center;
-    }
-    .header-content-detail, .header-content-detail h1, .header-social-media li {
-      color: @grey-2;
-    }
-    .header-img {
-      width: 150px;
-      height: 150px;
-      display: block;
-      margin: auto;
-    }
-    .header-content-detail button {
-      display: block;
-      margin: auto;
-    }
-    .header-social-media {
-      float: none !important;
-      text-align: center;
-    }
+  } 
+  .library-content-wrapper {
+  padding-left: @space-md;
+}
 }
 
 @media (min-width : 426px) and (max-width: 768px) {
