--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -83,6 +83,9 @@ h3 {
   }
 
   /* -- Settings -- */
+  .artist-account-navbar-wrapper {
+    width: 100%;
+  }
   .settings-mobile-nav {
     display: block;
   }
@@ -178,7 +181,16 @@ h3 {
   }
     .artist-main-content-wrapper h1 {
       font-size: 40px;
-    }  
+    }
+  .sidebar-hide  {
+    display: none;
+  }
+  .content-with-sidebar {
+    margin-left: 0;
+  }
+  .content-with-sidebar-settings {
+    margin-left: 0;
+  }    
 }
 
 @media (min-width: 769px) and (max-width: 991px) {
@@ -251,13 +263,16 @@ h3 {
   .upload-greeting {
     width: 100%;
   }
-  // -- Artist Profile --
+  .content-with-sidebar {
+    margin-left: 0;
+  }
+    // -- Artist Profile --
   .header-content-detail h1 {
     font-size: 35px;
   }
   .header-content-detail h4 {
     max-width: 480px;
-  }
+  } 
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .artist-featured-header-info ul {
@@ -276,12 +291,6 @@ h3 {
   .library-result-table table th:nth-child(4), .library-result-table table th:nth-child(7) {
     display: none;
   }
-  .header-content-detail h1 {
-    font-size: 35px;
-  }
-  .header-content-detail h4 {
-    max-width: 480px;
-  }
 }
 
 @media only screen and (max-width : 768px) {
@@ -297,7 +306,7 @@ h3 {
     .hide-mobile {
     display: none;
   }
-  // -- Artist Profile --
+    // -- Artist Profile --
   .header-wrapper {
     height: 500px;
   }
@@ -339,10 +348,8 @@ h3 {
     .artist-table-wrapper table td:nth-child(7) {
       display: none;
     }
-    .sidebar-hide {
-      display: none;
-    }
-    .content-with-sidebar {
-      margin-left: 0;
+    .search-sidebar-tablet {
+      width: 100%;
+      padding-bottom: @space-md;
     }
 }
