--- a/assets/styles/creator.less
+++ b/assets/styles/creator.less
@@ -6,7 +6,6 @@
     margin-top: -20px;
     text-align: left;
     width: 100%;
-    height: 220px;
   }
   .creator-banner  {
     background-image: url('https://i.ytimg.com/vi/AqpzxxxrkAY/maxresdefault.jpg');
@@ -98,6 +97,8 @@
   .creator-stats-wrapper h1, .creator-profile-img {
     margin-top: 25px;
   }
+
+
 }
 /*desktop*/
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -157,7 +158,7 @@
 /*tablet*/
 @media (min-width: 769px) and (max-width: 990px) {
   .creator-stats-bar-background {
-
+    margin-top: 280px;
   }
   .creator-stats-list {
     margin-top: -65px;
@@ -166,6 +167,7 @@
 /*desktop*/
 @media (min-width: 991px) and (max-width: 1199px) {
   .creator-stats-bar-background {
+    margin-top: 260px;
   }
   .creator-stats-list {
     margin-top: -65px;
@@ -174,7 +176,7 @@
 /* large desktop*/
 @media (min-width: 1200px) {
   .creator-stats-list {
-    margin-top: 0;
+    margin-top: 220px;
   }
   .creator-stats-bar-background {
     margin-top: 10px;
