Account Settings API, New Audio Player, Playlist fiile cleanup

--- a/assets/styles/variables.less
+++ b/assets/styles/variables.less
@@ -34,3 +34,8 @@
 @drop-3: inset 0 1px 1px rgba(0,0,0,.075);
 @drop-4: 1px 1px 4px 0px rgba(0, 0, 0, 0.6);  /* example: profile img */
 @drop-5: 0 0 6px 0 rgba(0, 0, 0, 0.3);  /* example: nav bars */
+
+@bd-rad-sm: 3px;
+@bd-rad-md: 8px;
+@bd-rad-lg: 12px; 
+@bd-rad-circle: 50%;
