--- a/assets/styles/library.less
+++ b/assets/styles/library.less
@@ -14,6 +14,7 @@
 }
   .library-filter h4:hover {
     border-bottom: 2px solid @primary;
+    padding-bottom: @space-sm;
   }
   .btn-wrapper {
     display: inline-block;
