Update Upload Success responsiveness

--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -105,7 +105,9 @@ h3 {
     float: left !important;
     padding-top: 10px;
   }
-
+  .artist-upload-success {
+    display: none;
+  }
   .library-filter li:nth-child(1), .library-filter li:nth-child(3), .library-filter li:nth-child(4), .library-filter li:nth-child(5) {
     display: none;
   }
