--- a/assets/styles/artist-internal.less
+++ b/assets/styles/artist-internal.less
@@ -189,7 +189,7 @@
 .artist-upload-success {
   width: 70%;
   display: inline-block;
-  margin: 0 5%;
+  margin: 0 0 0 5%;
   padding: 0 5%;
 }
 .artist-success-box {
@@ -222,14 +222,20 @@
     width: 20px;
     height: 20px;
     border-radius: none;
+    margin-bottom: 2%
   }
+  .icon {
+    text-align: center;
+  }
+}
+.tags {
+  padding: 0 0 4% 0;
 }
 .artist-tag-checkbox-hidden {
   visibility: hidden;
 }
 .artist-tag-checkbox-visible {
   visibility: visible;
-  margin-bottom: 4%;
 }
 .artist-upload-success-slider {
   input[type=range] {
