Correct Upload Success Responsiveness

--- a/assets/styles/artist-internal.less
+++ b/assets/styles/artist-internal.less
@@ -184,10 +184,10 @@
 }
 /*-- Artist Upload Success --*/
 .artist-upload-success {
-  width: 70%;
+  width: 90%;
   display: inline-block;
   margin: 0 0 0 5%;
-  padding: 0 5%;
+  padding: 0 5% 5%;
 }
 .artist-success-box {
   text-align: center;
@@ -218,15 +218,12 @@
   input[type=checkbox] {
     width: 20px;
     height: 20px;
-    border-radius: none;
+    border-radius: 0;
     margin-bottom: 2%
   }
   .icon {
     text-align: center;
   }
-}
-.tags {
-  padding: 0 0 4% 0;
 }
 .artist-tag-checkbox-hidden {
   visibility: hidden;
