--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -227,22 +227,22 @@ h3 {
   }
   /*-- Atist Upload Success --*/
   .artist-upload-success {
+    width: 100%;
     float: right;
   }
   .artist-upload-success-tags {
     h5 {
-      margin-bottom: 4%;
+      margin-bottom: 3%;
     }
   }
   .checkbox {
-    padding: 4% 0 7% 4%;
+    padding: 3% 0 6% 4%;
   }
   .artist-tags-visible {
     margin: 4% 0 0;
   }
   .artist-tag-checkbox-visible {
   visibility: visible;
-  margin-bottom: 6%;
   }
   .artist-upload-success-slider {
     margin-top: 4%;
