--- a/assets/styles/form.less
+++ b/assets/styles/form.less
@@ -35,11 +35,16 @@ textarea.form-input {
     height: 180px;
     position: relative;
     background: @grey-6;
+    cursor: pointer;
 
     .upload-label {
         position: absolute;
         top: 45%;
         width: 100%;
+    }
+    .upload-label.update {
+        color: @white;
+        display: none;
     }
     input {
         width: 100%;
@@ -54,6 +59,9 @@ textarea.form-input {
         width: 100%;
         height: 100%;
     }
+}
+.upload:hover .upload-label.update {
+    display: block;
 }
 .upload.circle {
     width: 180px;
