--- a/assets/styles/nav.less
+++ b/assets/styles/nav.less
@@ -16,6 +16,7 @@
     display: block;
     opacity: 0.25;
     transform: translateX(0px);
+    z-index: 2999;
 }
 .menu-page-overlay {
     z-index: 3500;
@@ -263,4 +264,16 @@ a.filter-nav-next {
     .filter-menu-footer {  
         display: none;
     }
+}
+.search-input-wrapper {
+  display: inline;
+}
+#search-input {
+  display: inline;
+  width: 300px;
+  height: 30px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.5);
+}
+.search-state {
+  top: 60px;
 }
