--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -171,12 +171,12 @@ ol, ul {
     height: 100%;
 }
 .sidebar {
-    width: 220px;
+    width: 260px;
     float: left;
+    padding: 20px;
 }
 .content-with-sidebar {
-    margin-left: 220px;
-}
-.content-with-sidebar-settings {
-    margin-left: 220px;
+    margin-left: 260px;
+    padding: 20px;
+    position: absolute;
 }
