--- a/assets/styles/form.less
+++ b/assets/styles/form.less
@@ -54,6 +54,7 @@ textarea.form-input {
         overflow: hidden;
         position: absolute;
         top: 0;
+        cursor: pointer;
     }
     img {
         width: 100%;
@@ -63,6 +64,13 @@ textarea.form-input {
 .upload:hover .upload-label.update {
     display: block;
 }
+.upload.lg {
+    height: 300px;
+
+    input {
+        height: 300px;
+    }
+}
 .upload.circle {
     width: 180px;
     -webkit-border-radius: @bd-rad-circle;
@@ -71,6 +79,30 @@ textarea.form-input {
 
     input {
         width: 180px;
+    }
+}
+.drag-drop {
+    overflow: hidden;
+    margin: auto;
+    position: relative;
+    cursor: pointer;
+    border: 1px dashed @grey-5;
+    height: 60px;
+
+    .drag-drop-label {
+        position: absolute;
+        top: 20px;
+        width: 100%;
+    }
+    input {
+        width: 100%;
+        height: 60px;
+        display: block;
+        opacity: 0;
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        cursor: pointer;
     }
 }
 
