Add styling and links to Admin

--- a/assets/styles/admin.less
+++ b/assets/styles/admin.less
@@ -19,7 +19,9 @@
 	padding: 0 10%;
 }
 .timeline-nav {
-	margin-left: 60%;
+	text-align: right;
+	margin-right: 10%;
+	cursor: pointer;
 } 
 .timeline-nav li {
 	display: inline-block;
@@ -54,3 +56,31 @@
 	text-align: center;
 	margin: 9% 0;
 }
+/*-- Admin New Submissions --*/
+.admin-new-submissions-title {
+	margin: 0 0 2% 10%;
+}
+.top-title {
+	margin-top: -4%;
+	margin-bottom: 20%; /*-- remove when table inserted --*/
+}
+.admin-new-submissions-export-link {
+	float: right;
+	margin-right: 10%;
+	font-family: @font-reg;
+}
+.admin-table {
+	width: 80%;
+	margin: 0 10%;
+}
+.admin-table span {
+	cursor: pointer;
+}
+.admin-table-header th {
+	padding-bottom: 2.25%;
+	border-bottom: 2px solid @grey-5
+}
+.admin-table-body td {
+	padding: 2% 0;
+}
+
