Update admin new submissions

--- a/assets/styles/admin.less
+++ b/assets/styles/admin.less
@@ -16,7 +16,7 @@
 /* -- Admin Dashboard -- */
 .admin-dash-bottom {
 	width: 100%;
-	padding: 0 10%;
+	padding: 0 12%;
 }
 .timeline-nav {
 	text-align: right;
@@ -35,7 +35,7 @@
 .admin-dashboard-box {
 	width: 40%;
 	height: 28%;
-	// margin: 2.5% 3%;
+	margin: 2.5% 3%;
 	border-radius: 0.05rem;
 	box-shadow: @drop-4;
 }
@@ -80,7 +80,8 @@
 	padding-bottom: 2.25%;
 	border-bottom: 2px solid @grey-5
 }
-.admin-table-body td {
-	padding: 2% 0;
+.admin-table tr {
+	color: @grey-2
 }
-
+.img-box img {
+}
