--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -9,6 +9,10 @@ h1 {
 h3 {
   font-size: 18px;
 }
+.content-with-sidebar {
+    width: 100%;
+}
+
 	/* System Level Nav Menu */
     .filter-menu > div {
         height: 100%;
@@ -123,7 +127,10 @@ h3 {
 }
 
 @media (min-width : 426px) and (max-width: 768px) {
- 
+  .content-with-sidebar {
+    width: 100%;
+  }
+
     /* -- Artist Profile -- */
   .artist-featured-header {
     background-position: center top;
