--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -176,7 +176,9 @@ ol, ul {
     padding: 20px;
 }
 .content-with-sidebar {
+    height: 100%;
     margin-left: 260px;
+    width: ~"calc(100% - 260px)";
     padding: 20px;
     position: absolute;
 }
