--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -10,6 +10,11 @@ h1 {
 h3 {
   font-size: 20px;
 }
+
+.content-with-sidebar {
+  width: 100%;
+}
+
     .upload-mobile-hidden {
         display: none;
     }
@@ -198,6 +203,10 @@ h3 {
 }
 
 @media (min-width: 769px) and (max-width: 991px) {
+.content-with-sidebar {
+  width: 100%;
+}
+
   .artist-featured-badge-icon {
     margin-left: -60px;
   }
