Create admin chart

--- a/assets/styles/admin.less
+++ b/assets/styles/admin.less
@@ -62,7 +62,6 @@
 }
 .top-title {
 	margin-top: -4%;
-	margin-bottom: 20%; /*-- remove when table inserted --*/
 }
 .admin-new-submissions-export-link {
 	float: right;
@@ -84,4 +83,8 @@
 	color: @grey-2
 }
 .img-box img {
+}
+/*-- Admin Chart --*/
+.admin-chart {
+	margin: 5% 10%;
 }
