--- a/assets/styles/form.less
+++ b/assets/styles/form.less
@@ -109,6 +109,7 @@ textarea.form-input {
 
 /* BEGIN Button Styles */
 .btn {
+    color: @white;
     -webkit-border-radius: @bd-rad-sm;
     -moz-border-radius: @bd-rad-sm;
     border-radius: @bd-rad-sm;   
@@ -122,8 +123,13 @@ textarea.form-input {
     line-height: 30px; 
     margin: 5px auto;
 }
-.btn-primary {
-    color: #fff;
+.btn:hover, .btn:focus, .btn:active {
+    color: @white;
+    border: none;
+    outline: none;
+}
+.btn-primary, .btn-primary-lt {
+    color: @white;
     padding: 10px;
     background-color: @primary;
     border: none;
@@ -136,8 +142,12 @@ textarea.form-input {
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
     background-color: @primary-lt;
-    border: none;
-    outline: none;
+}
+.btn-primary-lt {
+    background-color: @primary-lt;
+}
+.btn-primary-lt:hover, .btn-primary-lt:focus, .btn-primary-lt:active {
+    background-color: @primary-lt;
 }
 .btn-sm {
     font-size: 18px;
