--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -122,11 +122,18 @@ h3 {
     display: none;
   } 
   .library-content-wrapper {
-  padding-left: @space-md;
-}
+    padding-left: @space-md;
+  }
+  .footer-wrapper li {
+    padding: 0 10px;
+  }
+  .footer-links {
+    float: none !important;
+    padding-left: @space-lg !important;
+  }
 }
 
-@media (min-width : 426px) and (max-width: 768px) {
+@media (min-width : 481px) and (max-width: 768px) {
   .content-with-sidebar {
     width: 100%;
   }
