--- a/assets/styles/nav.less
+++ b/assets/styles/nav.less
@@ -160,6 +160,7 @@ a.brand {
     white-space: nowrap;    
     position: relative;
     z-index: 2500;
+    margin-bottom: 10px;
 }
 .filter-nav-list::-webkit-scrollbar {
     display: none;
