--- a/assets/styles/footer.less
+++ b/assets/styles/footer.less
@@ -2,18 +2,22 @@
 
 .footer-wrapper {
   width: 100%;
-  margin-top: 200px;
+  // margin-top: 200px;
   position: relative;
   background-color: #2D3743;
   display: inline-block;
   right: 0;
   left: 0;
+  bottom: 0;
   color: white;
 }
   .footer-wrapper li {
     display: inline-block;
-    padding: 15px; 
+    padding: 5px @space-sm; 
   }
   .footer-wrapper a {
     color: white;
+  }
+  .footer-links {
+    float: right !important;
   }
