--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -173,12 +173,18 @@ ol, ul {
 .sidebar {
     width: 260px;
     float: left;
-    padding: 20px;
+    padding: 20px;  
+    top:0;
+    bottom:0;
+}
+.sidebar-nav {
+    width: 260px;
+    float: left;
+    padding: 0;
+    top: 0;
 }
 .content-with-sidebar {
-    height: 100%;
+    min-height: 100%;
     margin-left: 260px;
     width: ~"calc(100% - 260px)";
-    padding: 20px;
-    position: absolute;
 }
