Add Admin New Creators

--- a/assets/styles/admin.less
+++ b/assets/styles/admin.less
@@ -1,4 +1,8 @@
 @import url("variables.less");
+
+// .header {
+// 	display: none;
+// }
 /* -- Admin Header -- */
 .admin-header {
 	z-index: 3000;
@@ -56,14 +60,14 @@
 	text-align: center;
 	margin: 9% 0;
 }
-/*-- Admin New Submissions --*/
-.admin-new-submissions-title {
+/*-- Admin data pages (new submissions, creators, artists) --*/
+.admin-data-pages-title {
 	margin: 0 0 2% 10%;
 }
 .top-title {
 	margin-top: -4%;
 }
-.admin-new-submissions-export-link {
+.admin-data-pages-export-link {
 	float: right;
 	margin-right: 10%;
 	font-family: @font-reg;
