Add Payment Options

--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -204,13 +204,32 @@ h3 {
     width: 95%;
     margin: 0 2.5%;
   }
+  /*-- Payment Options --*/ 
+  .payment-options-page {
+    padding: 9% 3%;
+    height: 100vh;
+    overflow: scroll;
+  }
+  .payment-options-content {
+    width: 280px;
+    margin: 0 auto
+  }
+  .payment-options {
+    width: 275px;
+    display: block;
+    margin-bottom: @space-sm
+  }
+  .payment-options:hover {
+    -webkit-transform: scale(1.08);
+    -moz-tranfrom: scale(1.08);
+    transform: scale(1.08);
+  }
 }
 
 @media (min-width: 769px) and (max-width: 991px) {
-.content-with-sidebar {
-  width: 100%;
-}
-
+  .content-with-sidebar {
+    width: 100%;
+  }
   .artist-featured-badge-icon {
     margin-left: -60px;
   }
@@ -318,7 +337,23 @@ h3 {
   }
   .header-content-detail h4 {
     max-width: 480px;
-  } 
+  }
+  /*-- Payment Options --*/ 
+  .payment-options-page {
+    padding: 9% 3%
+  }
+  .payment-options-content {
+    width: 740px;
+    margin: 0 auto;
+  }
+  .payment-options {
+    width: 240px;
+  }
+  .payment-options:hover {
+    -webkit-transform: scale(1.08);
+    -moz-tranfrom: scale(1.08);
+    transform: scale(1.08);
+  }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .artist-featured-header-info ul {
