--- a/assets/styles/footer.less
+++ b/assets/styles/footer.less
@@ -4,16 +4,17 @@
   width: 100%;
   margin-top: 200px;
   position: relative;
-  background-color: #2D3743;
+  background-color: @grey-1;
   display: inline-block;
   right: 0;
   left: 0;
   color: white;
-}
-  .footer-wrapper li {
+
+  li {
     display: inline-block;
     padding: 15px; 
   }
-  .footer-wrapper a {
+  a {
     color: white;
   }
+}
