added creator home page

--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -131,6 +131,29 @@ h3 {
     float: none !important;
     padding-left: @space-lg !important;
   }
+  /*creator home*/
+  .featured-wrapper {
+    background-position: top;
+    height: 100%;
+  }
+  .featured-content {
+    width: 100%;
+    margin-top: 230px;
+  }
+  .play {
+    margin-top: -410px;
+  }
+  .top-album-wrapper {
+    padding-top: @space-md;
+    margin-top: 350px;
+  }
+  .top-album-img {
+    height: 150px;
+    width: 150px;
+  }
+  a.album-nav-prev, a.album-nav-next {
+    display: none;
+  }
 }
 
 @media (min-width : 481px) and (max-width: 768px) {
