--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -204,6 +204,26 @@ h3 {
     width: 95%;
     margin: 0 2.5%;
   }
+  /*creator home*/
+  .featured-wrapper {
+    background-position: top;
+  }
+  .top-album-img {
+    height: 200px;
+    width: 200px;
+  }
+  a.album-nav-prev, a.album-nav-next {
+    padding: 90px 10px 0;
+    height: 200px;
+  }
+  .play {
+    margin-top: @space-lg;
+    margin-left: 80px;
+    float: none;
+  }
+  .top-album-wrapper {
+    padding-top: @space-lg;
+  }
 }
 
 @media (min-width: 769px) and (max-width: 991px) {
