--- a/assets/styles/footer.less
+++ b/assets/styles/footer.less
@@ -2,7 +2,7 @@
 
 .footer-wrapper {
   width: 100%;
-  // margin-top: 200px;
+  z-index: 3000;
   position: relative;
   background-color: #2D3743;
   display: inline-block;
