cleaned up css and fixed conflicts

--- a/assets/styles/artist-search.less
+++ b/assets/styles/artist-search.less
@@ -22,6 +22,8 @@
 }
 .artist-search-tags-list li {
 	text-align: left;
+	border: none;
+	padding: 0;
 }
 .artist-search-album-detail {
 	margin-top: 25px;
