--- a/assets/styles/footer.less
+++ b/assets/styles/footer.less
@@ -4,7 +4,7 @@
   width: 100%;
   z-index: 3000;
   position: relative;
-  background-color: @grey-1;
+  background-color: #2D3743;
   display: inline-block;
   right: 0;
   left: 0;
@@ -12,7 +12,8 @@
 
   li {
     display: inline-block;
-    padding: 15px; 
+    padding: 15px;
+    border: none; 
   }
   a {
     color: white;
