--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -71,8 +71,9 @@
 	}
 	.search-sidebar-tablet {
 		width: 100%;
-		padding-bottom: @space-md;
+		padding: 0 @space-md @space-md;
 		text-align: center;
+    position: relative;
 	}
 
 	/*-- Admin table --*/    
@@ -287,8 +288,6 @@
       -moz-tranfrom: scale(1.08);
       transform: scale(1.08);
     }
-<<<<<<< HEAD
-=======
   .sidebar-hide  {
     display: none;
   }
@@ -323,7 +322,6 @@
   .top-album-wrapper {
     padding-top: @space-lg;
   }
->>>>>>> davith
 }
 
 @media (max-width: 990px) {
