syncing to demo for chris

--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -184,6 +184,9 @@
   a.album-nav-prev, a.album-nav-next {
     display: none;
   }
+  .album-art-box {
+    margin-left: 0;
+  }
 }
 
 @media (min-width : 481px) and (max-width: 768px) {
