--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -219,7 +219,7 @@
 
 	/*-- Artist Search -- */
 	.artist-search-table-wrapper {
-		display: none;
+		// display: none;
 	}
 	.artist-search-tags-list li {
 		display: inline-block;
@@ -255,7 +255,7 @@
 		margin-left: -15px;
 	}
 	.artist-search-side-bar-wrapper {
-		margin-top: 50px;
+		margin-top: @space-md;
 		width: 100%;
 	}
 
