--- a/assets/styles/payment-options.less
+++ b/assets/styles/payment-options.less
@@ -10,7 +10,7 @@
 	background-size: cover;
 }
 .payment-options-content {
-	width: 795px;
+	width: 847px;
 	margin: 0 auto
 }
 .payment-options {
@@ -26,6 +26,18 @@
 	-webkit-transition: all 0.35s ease-in;
 	-moz-transition: all 0.35s ease-in;
 	transition: all 0.35s ease-in;
+}
+.gig-pack {
+	-webkit-transform: scale(1.2);
+	-moz-tranfrom: scale(1.2);
+	transform: scale(1.2);
+	.payment-options-btn {
+		padding: @space-md;
+		margin: 10px 0;
+		background-color: @primary;
+		color: white;
+		cursor: pointer;
+	}
 }
 .payment-options:hover {
 	-webkit-transform: scale(1.2);
