Update less fixes for admin

--- a/assets/styles/admin.less
+++ b/assets/styles/admin.less
@@ -83,8 +83,8 @@
 	padding-bottom: 2.25%;
 	border-bottom: 2px solid @grey-5
 }
-.admin-table tr {
-	color: @grey-2
+.admin-table-body tr {
+	color: @grey-2;
 }
 .img-box img {
 }
