--- a/assets/styles/payment-options.less
+++ b/assets/styles/payment-options.less
@@ -9,6 +9,9 @@
 	background-attachment: fixed;
 	background-size: cover;
 }
+.payment-options-mobile {
+	display: none;
+}
 .payment-options-content {
 	width: 847px;
 	margin: 0 auto
