wired up album names for artist

--- a/assets/styles/artist-internal.less
+++ b/assets/styles/artist-internal.less
@@ -553,6 +553,9 @@
 		}
 	}
 }
+.artist-upload ul li {
+	padding: @space-sm 0;
+}
 .artist-account-form-content-wrapper {
 	background-color: white;
 	padding: 20px 25px;
