--- a/assets/styles/form.less
+++ b/assets/styles/form.less
@@ -29,6 +29,20 @@ textarea.form-input {
     padding: 20px;
 }
 
+.dropdown-menu {
+    width: 100%;
+    margin-top: 6px;
+    padding: 0;
+
+    li {
+        padding: 5px 10px;
+    }
+    li:hover {
+        background: @grey-6;
+        color: @grey-1;
+    }
+}
+
 .upload {
     overflow: hidden;
     margin: auto;
