--- a/assets/styles/library.less
+++ b/assets/styles/library.less
@@ -14,7 +14,7 @@
 		padding-right: 30px;
 		font-family: @font-reg;
 	}
-	h4:hover {
+	h4:hover, .selected {
 		border-bottom: 2px solid @primary;
 		padding-bottom: @space-sm;
 	}
