Add Detailed Payment Options

--- a/assets/styles/mobile.less
+++ b/assets/styles/mobile.less
@@ -220,6 +220,41 @@
     color: white;
     cursor: pointer;
   }
+
+  /* -- Detailed Payment Options -- */
+  .detail-payment-option-mobile {
+    display: block;
+  }
+  .detail-payment-option-content {
+    display: none;
+  }
+  .detailed-payment-option {
+    width: 310px;
+    padding: 10px 5px;
+  }
+  .detail-payment-options-price-mobile {
+    font-family: @font-reg;
+    font-size: 3.5em;
+    color: @grey-2;
+  }
+  .detail-payment-sub-heading-mobile {
+    font-size: 1.1em;
+    font-family: @font-reg;
+  }
+  .detail-payment-left {
+    padding: 7px;
+  }
+  .detail-payment-right {
+    width: 175px;
+    padding: 5px;
+  }
+  .detail-payment-right button {
+    width: 170px;
+    font-size: 1em;
+  }
+  .detail-payment-right h4 {
+    font-size: 1em;
+  }
 }
 
 @media (min-width : 481px) and (max-width: 768px) {
@@ -376,6 +411,32 @@
   }
   .payment-mobile-left, .payment-mobile-right {
     vertical-align: top;
+  }
+
+  /* -- Detailed Payment Options -- */
+  .detail-payment-option-mobile {
+    display: block;
+  }
+  .detail-payment-option-content {
+    display: none;
+  }
+  .detailed-payment-option {
+    width: 450px;
+  }
+  .detail-payment-options-price-mobile {
+    font-family: @font-reg;
+    font-size: 3.5em;
+    color: @grey-2;
+  }
+  .detail-payment-sub-heading-mobile {
+    font-family: @font-reg;
+  }
+  .detail-payment-right {
+    width: 272px;
+  }
+  .detail-payment-right button {
+    width: 260px;
+    font-size: 1.5em;
   }
 }
 
