--- a/assets/styles/tablet.less
+++ b/assets/styles/tablet.less
@@ -467,21 +467,31 @@
 	} 
 	
 	/*-- Payment Options --*/ 
-    .payment-options-page {
-      padding: 9% 3%
-    }
-    .payment-options-content {
-      width: 740px;
-      margin: 0 auto;
-    }
-    .payment-options {
-      width: 240px;
-    }
-    .payment-options:hover {
-      -webkit-transform: scale(1.08);
-      -moz-tranfrom: scale(1.08);
-      transform: scale(1.08);
-    }
+  .payment-options-page {
+    padding: 9% 3%
+  }
+  .payment-options-content {
+    width: 740px;
+    margin: 0 auto;
+  }
+  .payment-options {
+    width: 240px;
+  }
+  .payment-options:hover {
+    -webkit-transform: scale(1.08);
+    -moz-tranfrom: scale(1.08);
+    transform: scale(1.08);
+  }
+  /* -- Detailed Payment Options -- */
+  .detailed-payment-option {
+		width: 750px;
+	}
+	.detail-payment-right {
+		width: 450px;
+	}
+	.detail-payment-right button {
+		width: 425px;
+	}
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
