Create Payment Process Page

--- a/assets/styles/payment-options.less
+++ b/assets/styles/payment-options.less
@@ -105,3 +105,12 @@
 	color: @grey-3;
 }
 
+/* -- Payment Processing Page -- */
+.payment-processing-page .circled-number {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	background: black;
+	color: white;
+}
+
